Merged revisions 788774 via svnmerge from https://svn.apache.org/repos/asf/cxf/trunk
........
  r788774 | dkulp | 2009-06-26 13:25:41 -0400 (Fri, 26 Jun 2009) | 2 lines
  
  Remove commons-codec from required jars list for corba bindings (still
  needed by abdera/jax-rs though)
........


git-svn-id: https://svn.apache.org/repos/asf/cxf/branches/2.2.x-fixes@788828 13f79535-47bb-0310-9956-ffa450edef68